# galactic

./: .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  API_REFERENCE.md  LICENSE  README.md  Untitled.ipynb  dataset.py  embedding.py  pyproject.toml  requirements.txt
c4-with_embs/: dataset_info.json  state.json
docs/: GalacticDataset.rst  api.rst  classifiers.rst  clustering.rst  conf.py  conversations.rst  embedding.rst  filters.rst  index.rst  installation.rst  loaders.rst  minhash.rst  quickstart.rst  requirements.txt  taggers.rst  transforms.rst  visualize.rst
examples/: Untitled.ipynb  clustering.ipynb  example.ipynb  hermes.ipynb  rlhf-data.ipynb
samsum/: dataset_info.json  state.json
src/docent/: dataset.py
src/galactic/: __init__.py  async_anyscale.py  async_openai.py  async_replicate.py  augment.py  base.py  classifiers.py  cluster.py  clustering.py  conversations.py  dataset.py  distill.py  embedding.py  extract_doc.py  filters.py  galactic.py  kenlm.py  loaders.py  logger.py  minhash_lsh.py  modal_embeddings.py  save.py  scraping.py  semdedup.py  taggers.py  transforms.py  utils.py  visualize.py
src/galactic/embedding_backends/: base.py  ctranslate2.py  ctranslate2_backend.py  modal.py  modal_backend.py  modal_remote.py  onnx.py  onnx_backend.py  openai_backend.py  replicate_backend.py
tests/: README.md  test_count_tokens  test_filter_string  test_init  test_load_file_formats  test_save
