[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "galactic-ai"
version="0.2.2"
authors = [
    {name = "Benjamin Anderson", email = "ben@trytaylor.ai"},
]
description = "Curate, annotate, and clean massive unstructured text datasets for machine learning and AI systems."
readme = "README.md"
requires-python = ">=3.7"
keywords = []
license = {text = "Apache 2.0"}
classifiers = []
dependencies = [
    "colorama",
    "datasets",
    "ctranslate2",
    "onnxruntime",
    "transformers",
    "huggingface_hub",
    "numpy",
    "pandas",
    "tqdm",
    "pybloom_live",
    "networkx",
    "scikit-learn",
    "scrubadub", 
    "fasttext",
    "pyarrow",
    "openai",
    "tiktoken",
    "jinja2",
    "sentencepiece",
    "aiohttp",
    "protobuf==3.20.1"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''